@@ -426,6 +426,7 @@ SCh152- [mingw+pthread]: default nbthreads support
         render \'{e} as &eacute; (the actual eight-bit char) instead of 'e
    162- GP function msfromhecke, msgetlevel, msgetweight, msgetsign
    163- qfisominit: allow to pass the matrix of minimal vectors [#1656]
+   164- [libpari] GENtostr_raw
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
